# nerfgun

./: .gitignore  LICENSE  MANIFEST.in  README.md  custom-controller.ino  install.sh  setup.py  sync-to-pi.sh
arduino/custom_controller/: CMakeLists.txt  Makefile  bt.cpp  bt.h  bt.ino  cmake_install.cmake  custom_controller.ino  custom_controller_custom_controller.ino.cpp  mouse.h
arduino/custom_controller/bt/: bt.cpp  bt.h
arduino/custom_controller/cmake/Platform/: Arduino.cmake
arduino/custom_controller/libs/: keyboard.h
btemu/: agent.py  agent_helpers.py  btemu.conf  cfg.py  constants.py  controller.py  device.py  hci.py  hid.py  install.py  kbd.py  mouse.py  power.py  profile.py  rootcheck.py  service.py  state.py
btemu/adafruit/: BNO055.py  SSD1306.py
btemu/resources/: bluetooth.service  btemu-agent.service  btemu-hid.service  btemu-logging.ini  btemu-power.service  btemu.conf
docs/: install.md
docs/diagrams/: breadboard.fzz
sysconfigs/: bluetooth.service  btemu-hci.service  btemu-power.service
wip/: controller.py  press_button.py  simpletest.py
